# dynk

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/modules/: Config.cmake.in  dependencies.cmake  install.cmake  options.cmake
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  class.hpp  example_1_layer.cpp  example_2_wrapper_if.cpp  example_4_wrapper_function.cpp  example_5_wrapper_functor.cpp  example_6_wrapper_lambda.cpp  example_if_function_twice.cpp  example_layer.cpp  example_wrapper_function.cpp  example_wrapper_function_twice.cpp  example_wrapper_functor.cpp  example_wrapper_lambda.cpp  main.hpp
include/: CMakeLists.txt
include/dynk/: dual_view.hpp  dynamic.hpp  dynamic_kokkos.hpp  layer.hpp  wrapper.hpp
tests/: CMakeLists.txt  main.cpp  test_dynamic.cpp  test_dynk.cpp  test_layer.cpp  test_wrapper.cpp
